--- a/app/src/main/res/layout/adapter_users.xml
+++ b/app/src/main/res/layout/adapter_users.xml
@@ -24,14 +24,20 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            style="?android:textAppearanceMedium"
+
             android:id="@+id/age"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            style="?android:textAppearanceMedium"
+
             android:id="@+id/weight"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            style="?android:textAppearanceMedium"
+
             android:id="@+id/height"/>
     </LinearLayout>
 </android.support.v7.widget.CardView>
